# FLL-SIM

./: .gitignore  Makefile  PYQT6_MIGRATION.md  README.md  WINDOWS_GUI_STANDARDS.md  docker-compose.yml  launch_gui.py  launch_gui_enhanced.py  main.py  package.json  pyproject.toml  requirements-api.txt  requirements.txt  run.sh  run_gui.sh  run_gui_test.sh  setup.py  setup_new.py  simple_sim.py  test_enhanced_integration.py  test_env.sh  test_fixes.py  test_gui.py  test_gui_background.py  test_gui_launch.py  test_imports.py  validate_enhanced_systems.py  validate_gui_fixes.py
.copilot/: common.json  config.json
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
api/: auth.py  database.py  main.py  models.py
config/: app_config.json  backup_config.json
configs/missions/: fll_seasons.yaml
configs/profiles/: defaults.yaml
configs/robots/: defaults.yaml  pybricks_defaults.yaml
configs/simulations/: defaults.yaml
docker/: Dockerfile  api.Dockerfile  dev-backend.Dockerfile  dev-frontend.Dockerfile  dev-testing.Dockerfile  dev-tools.Dockerfile  dev-vscode.Dockerfile  docker-compose.dev.yml  docker-compose.devcontainer.yml  docker-compose.yml  entrypoint.sh  production-compose.yml  web.Dockerfile
docs/: accessibility_guide.md  analytics_guide.md  api_reference.md  backup_manager_guide.md  cloud_sync_guide.md  developer_guide_education.md  developer_onboarding.md  gui_guide.md  internationalization_guide.md  project_plan.md  project_progress.md  test_plan.md  test_progress.md  universal_docker_strategy.md  workflow.md
scripts/: build_windows_exe.ps1  install-system-pygame.sh  setup-dev-env.sh
src/fll_sim/: __init__.py  cli.py  enhanced_integration.py
src/fll_sim/cloud/: cloud_auto_backup.py  scheduler.py  status_reporter.py  sync.py
src/fll_sim/config/: __init__.py  config_manager.py  enhanced_config_manager.py
src/fll_sim/core/: __init__.py  simulator.py  state_management.py
src/fll_sim/education/: accessibility.py  adaptive_learning.py  analytics_reporting.py  assessment_tools.py  certification.py  community_features.py  curriculum_integration.py  educational_platform.py  guided_exercises.py  i18n.py  interactive_tutorial_system.py  internationalization.py  mission_builder.py  moderation_analytics.py  moderation_dashboard.py  onboarding.py  plugin_system.py  student_tracking.py  tutorial_system.py  visual_programming.py
src/fll_sim/environment/: game_map.py  mission.py
src/fll_sim/gui/: __init__.py  backup_manager.py  enhanced_simulator.py  main_gui.py  main_gui_pyqt.py  main_gui_tkinter.py  mission_editor_pyqt.py  mission_editor_tkinter.py  moderation_dashboard.py  robot_designer_pyqt.py  robot_designer_tkinter.py
src/fll_sim/plugins/: plugin_system.py  sample_mission_plugin.json
src/fll_sim/robot/: __init__.py  pybricks_api.py  robot.py
src/fll_sim/scripts/: __init__.py  fetch_all_mats.py  fetch_mat.py
src/fll_sim/sensors/: __init__.py  color_sensor.py  gyro_sensor.py  sensor_base.py  touch_sensor.py  ultrasonic_sensor.py
src/fll_sim/utils/: backup_utils.py  cloud_utils.py  docker_strategy.py  enhanced_errors.py  errors.py  file_utils.py  logger.py  mission_template_utils.py  mission_utils.py  robot_template_utils.py  sync_status_utils.py  (+1 more)
tests/: test_assets_mats_latest.py  test_cloud_auto_backup.py  test_cloud_scheduler.py  test_cloud_utils.py  test_community_features.py  test_core_modules.py  test_education_modules.py
(+4 files in other folders)
